home page data and butyl lithium

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -13,19 +13,22 @@
             <div class="address">
               <i class="icofont-google-map"></i>
               <h4>Location:</h4>
-              <p>A108 Adam Street, New York, NY 535022</p>
+              <p>G-4, Sai Peetambaram Residency, <br>
+                East Marredpally,
+                Secunderabad, <br>
+                Telangana, INDIA - 500 026</p>
             </div>
 
             <div class="email">
               <i class="icofont-envelope"></i>
               <h4>Email:</h4>
-              <p>info@example.com</p>
+              <p>info.mahidhara@gmail.com</p>
             </div>
 
             <div class="phone">
               <i class="icofont-phone"></i>
               <h4>Call:</h4>
-              <p>+1 5589 55488 55s</p>
+              <p>+91 8455 240445, +91 8455 285904</p>
             </div>
 
           </div>
