--- a/views/heroSection.ejs
+++ b/views/heroSection.ejs
@@ -5,9 +5,7 @@
         <div class="carousel-item active">
             <div class="carousel-container">
                 <h2 class="animate__animated animate__fadeInDown">Welcome to <span>Mahidhara</span></h2>
-                <p class="animate__animated fanimate__adeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi
-                    ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea
-                    voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.
+                <p class="animate__animated fanimate__adeInUp">We are specialised in the manufacture of bulk chemicals using Sodium, Potassium, Lithium and Magnesium metals.
                 </p>
                 <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
             </div>
@@ -16,10 +14,8 @@
         <!-- Slide 2 -->
         <div class="carousel-item">
             <div class="carousel-container">
-                <h2 class="animate__animated animate__fadeInDown">Lorem Ipsum Dolor</h2>
-                <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi
-                    ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea
-                    voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.
+                <h2 class="animate__animated animate__fadeInDown">Leading Bulk Drug Manufacturer</h2>
+                <p class="animate__animated animate__fadeInUp">We take pride in introducing and developing the technology to manufacture “Magnesium Tertiary Butoxide” for the first time in the Country
                 </p>
                 <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
             </div>
@@ -28,10 +24,8 @@
         <!-- Slide 3 -->
         <div class="carousel-item">
             <div class="carousel-container">
-                <h2 class="animate__animated animate__fadeInDown">Sequi ea ut et est quaerat</h2>
-                <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi
-                    ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea
-                    voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.
+                <h2 class="animate__animated animate__fadeInDown">Quality First</h2>
+                <p class="animate__animated animate__fadeInUp">Mahidhara Chemicals Private Limited has been awarded on NSIC – CRISIL Rating of CRISIL – SE2A
                 </p>
                 <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
             </div>
