--- a/views/services.ejs
+++ b/views/services.ejs
@@ -2,7 +2,7 @@
   <div class="container">
 
     <div class="section-title" data-aos="zoom-out">
-      <h2>Services</h2>
+      <h2>Products</h2>
       <p>What we do offer</p>
     </div>
 
