--- a/views/about.ejs
+++ b/views/about.ejs
@@ -9,20 +9,20 @@
       <div class="row content" data-aos="fade-up">
         <div class="col-lg-6">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua.
+            Established in 1997, Mahidhara chemicals has been a bulk manufacturer of special chemicals using Sodium, Potassium, Lithium and Magnesium metals for reputed companies.
           </p>
           <ul>
-            <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-            <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-            <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
+            <li><i class="ri-check-double-line"></i> We take pride in introducing and developing the technology to manufacture “Magnesium Tertiary Butoxide” for the first time in the Country</li>
+            <li><i class="ri-check-double-line"></i> This was followed by meeting the entire requirements of the tenofovir manufacturers. 
+            </li>
+            <li><i class="ri-check-double-line"></i> Our units have been accredited with the latest version of ISO 9001:2005</li>
           </ul>
         </div>
         <div class="col-lg-6 pt-4 pt-lg-0">
           <p>
-            Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-            velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
+            We currently operate throughout the country from our 2 plants based in Andhra Pradesh and Telangana.
+            Our aim is to manufacture Active pharmaceutical ingredients which are of top quality, discovering and innovating technologies that would create a new revolution in the industry.
+            We are focused at developing technologies that would eliminate the import of substitute products. 
           </p>
           <a href="#" class="btn-learn-more">Learn More</a>
         </div>
