--- a/views/featured.ejs
+++ b/views/featured.ejs
@@ -2,28 +2,34 @@
   <div class="container">
 
     <ul class="nav nav-tabs row d-flex">
-      <li class="nav-item col-3" data-aos="zoom-in">
+      <li class="nav-item col-2" data-aos="zoom-in">
         <a class="nav-link active show" data-toggle="tab" href="#tab-1">
           <i class="ri-gps-line"></i>
-          <h4 class="d-none d-lg-block">Modi sit est dela pireda nest</h4>
+          <h4 class="d-none d-lg-block">1997 Sodium Hydride</h4>
         </a>
       </li>
-      <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="100">
+      <li class="nav-item col-2" data-aos="zoom-in" data-aos-delay="100">
         <a class="nav-link" data-toggle="tab" href="#tab-2">
           <i class="ri-body-scan-line"></i>
-          <h4 class="d-none d-lg-block">Unde praesenti mara setra le</h4>
+          <h4 class="d-none d-lg-block">2001 Potassium Tertiary Butoxide</h4>
         </a>
       </li>
-      <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="200">
+      <li class="nav-item col-2" data-aos="zoom-in" data-aos-delay="200">
         <a class="nav-link" data-toggle="tab" href="#tab-3">
           <i class="ri-sun-line"></i>
-          <h4 class="d-none d-lg-block">Pariatur explica nitro dela</h4>
+          <h4 class="d-none d-lg-block">2003 n-Butyl Lithium</h4>
         </a>
       </li>
-      <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="300">
+      <li class="nav-item col-2" data-aos="zoom-in" data-aos-delay="300">
         <a class="nav-link" data-toggle="tab" href="#tab-4">
           <i class="ri-store-line"></i>
-          <h4 class="d-none d-lg-block">Nostrum qui dile node</h4>
+          <h4 class="d-none d-lg-block">2006 Lithium Tert Butoxide</h4>
+        </a>
+      </li>
+      <li class="nav-item col-2" data-aos="zoom-in" data-aos-delay="400">
+        <a class="nav-link" data-toggle="tab" href="#tab-5">
+          <i class="ri-body-scan-line"></i>
+          <h4 class="d-none d-lg-block">2008 Magnesium Tertiary Butoxide</h4>
         </a>
       </li>
     </ul>
@@ -32,20 +38,18 @@
       <div class="tab-pane active show" id="tab-1">
         <div class="row">
           <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+            <h3>Research & Development is the Core to our Foundation</h3>
             <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              We have state of art R&D centre, well-equipped with Quality Control laboratory and a team of qualified scientists & technologists.
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+              <li><i class="ri-check-double-line"></i> Mahidhara Chemicals Private Limited has been awarded on NSIC – CRISIL Rating of CRISIL – SE2A.</li>
+              <li><i class="ri-check-double-line"></i> Our chairman, Mr. R. Narasimha Raju has received a national award for best Research & Development efforts in Small Scale Industries from Sri. Jaswant Singh, Union Minister for Finance in the year 2002.</li>
+              <li><i class="ri-check-double-line"></i> Our chairman, Mr. R. Narasimha Raju has also received a national award for Outstanding Entrepreneurship Special recognition award in Small scale industries in September, 2011 from Sri. Veerabhadra Singh, Union Minister for Industries, Govt. of India.</li>
             </ul>
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
+              Being in this industry, it's our moral responsibility to take care of the environment we live in. All the products that are manufactured at Mahidhara chemicals are non- pollutants.
+              <br> Employees and staff are the foundation of any business and we believe in protecting them at all costs. Safety and hygiene are the topmost priority for us. Therefore, All staff members are trained to handle sodium, potassium, lithium and magnesium metals.
             </p>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
@@ -53,7 +57,7 @@
           </div>
         </div>
       </div>
-      <div class="tab-pane" id="tab-2">
+      <!-- <div class="tab-pane" id="tab-2">
         <div class="row">
           <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
             <h3>Neque exercitationem debitis soluta quos debitis quo mollitia officia est</h3>
@@ -125,7 +129,7 @@
             <img src="assets/img/features-4.png" alt="" class="img-fluid">
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
 
   </div>
