ten products data

--- a/views/singleProduct.ejs
+++ b/views/singleProduct.ejs
@@ -96,6 +96,7 @@
             <% }) %>
         </ol>
         <p style="font-weight: 100; font-size: smaller; font-style: italic;">* <%= product.note %> </p>
+        <p style=""> <%= product.manufacturer %> </p>
     </div>
 </section>
 <section>
