--- a/views/contactUs.ejs
+++ b/views/contactUs.ejs
@@ -3,7 +3,7 @@
 <%- include('head'); -%>
 
 <body>
-  <%- include('header'); -%>
+  <%- include('header', {products: products}); -%>
   <%- include('heroSection'); -%>
   <main id="main">
     <%- include('contactSites'); -%>
