--- a/views/featured.ejs
+++ b/views/featured.ejs
@@ -1,7 +1,7 @@
 <section id="features" class="features">
   <div class="container">
 
-    <ul class="nav nav-tabs row d-flex">
+    <!-- <ul class="nav nav-tabs row d-flex">
       <li class="nav-item col-2" data-aos="zoom-in">
         <a class="nav-link active show" data-toggle="tab" href="#tab-1">
           <i class="ri-gps-line"></i>
@@ -32,7 +32,7 @@
           <h4 class="d-none d-lg-block">2008 Magnesium Tertiary Butoxide</h4>
         </a>
       </li>
-    </ul>
+    </ul> -->
 
     <div class="tab-content" data-aos="fade-up">
       <div class="tab-pane active show" id="tab-1">
@@ -52,8 +52,8 @@
               <br> Employees and staff are the foundation of any business and we believe in protecting them at all costs. Safety and hygiene are the topmost priority for us. Therefore, All staff members are trained to handle sodium, potassium, lithium and magnesium metals.
             </p>
           </div>
-          <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="assets/img/features-1.png" alt="" class="img-fluid">
+          <div class="col-lg-6 order-1 order-lg-2 text-center featureImg">
+            <img src="assets/img/mcpl_img.jpg" alt="" class="img-fluid">
           </div>
         </div>
       </div>
