--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,14 +3,14 @@
 <%- include('head'); -%>
 
 <body>
-  <%- include('header'); -%>
+  <%- include('header', {products: products}); -%>
   <%- include('heroSection'); -%>
   <main id="main">
     <%- include('about'); -%>
     <%- include('featured'); -%>
     <%- include('callToAction'); -%>
-    <%- include('services'); -%>
-    <%- include('portfolio'); -%>
+    <%- include('services', {products: products}); -%>
+    <!-- <%- include('portfolio'); -%> -->
     <%- include('contact'); -%>
   </main>
   <%- include('footer'); -%>
@@ -29,6 +29,7 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 
 </body>
 
