--- a/views/callToAction.ejs
+++ b/views/callToAction.ejs
@@ -3,11 +3,11 @@
 
       <div class="row" data-aos="zoom-out">
         <div class="col-lg-9 text-center text-lg-left">
-          <h3>Call To Action</h3>
-          <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <h3>Call us now!</h3>
+          <p> For any product enquiry and orders, kindly contact our team</p>
         </div>
         <div class="col-lg-3 cta-btn-container text-center">
-          <a class="cta-btn align-middle" href="#">Call To Action</a>
+          <a class="cta-btn align-middle" href="tel:918455240445">Call</a>
         </div>
       </div>
 
