--- a/views/header.ejs
+++ b/views/header.ejs
@@ -2,23 +2,27 @@
   <div class="container d-flex align-items-center">
 
     <div class="logo mr-auto">
-      <h1 class="text-light"><a href="index.html">Mahidhara Chemicals</a></h1>
+      <!-- <h1 class="text-light"><a href="/">Mahidhara Chemicals</a></h1> -->
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      <a href="/"><img src="assets/img/mahidhara.png" alt="" class="img-fluid"> <span class="text-light logoText">Mahidhara Chemicals</span></a>
     </div>
 
     <nav class="nav-menu d-none d-lg-block">
       <ul>
-        <li class="active"><a href="index.html">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#services">Services</a></li>
+        <li class="active"><a href="/">Home</a></li>
+        <li><a href="/#about">About</a></li>
+        <!-- <li><a href="#services">Services</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#pricing">Pricing</a></li>
-        <li><a href="#team">Team</a></li>
-        <li class="drop-down"><a href="">Drop Down</a>
+        <li><a href="#team">Team</a></li> -->
+        
+        <li class="drop-down"><a href="">Products</a>
           <ul>
-            <li><a href="#">Drop Down 1</a></li>
-            <li class="drop-down"><a href="#">Drop Down 2</a>
+            <% products.forEach(prod => { %>
+              <li><a href="/product/<%- prod.displayUrl %> "><%- prod.displayName %> </a></li>
+            <% }) %>
+          
+            <!-- <li class="drop-down"><a href="#">Drop Down 2</a>
               <ul>
                 <li><a href="#">Deep Drop Down 1</a></li>
                 <li><a href="#">Deep Drop Down 2</a></li>
@@ -26,14 +30,14 @@
                 <li><a href="#">Deep Drop Down 4</a></li>
                 <li><a href="#">Deep Drop Down 5</a></li>
               </ul>
-            </li>
-            <li><a href="#">Drop Down 3</a></li>
+            </li> -->
+            <!-- <li><a href="#">Drop Down 3</a></li>
             <li><a href="#">Drop Down 4</a></li>
-            <li><a href="#">Drop Down 5</a></li>
+            <li><a href="#">Drop Down 5</a></li> -->
           </ul>
         </li>
-        <li><a href="#contact">Contact</a></li>
-
+       
+        <li style="float: inline-end;"><a href="/contact">Contact</a></li>
       </ul>
     </nav><!-- .nav-menu -->
 
