--- a/views/heroSection.ejs
+++ b/views/heroSection.ejs
@@ -1,49 +1,54 @@
 <section id="hero" class="d-flex flex-column justify-content-end align-items-center">
-    <div id="heroCarousel" class="container carousel carousel-fade" data-ride="carousel">
 
-        <!-- Slide 1 -->
-        <div class="carousel-item active">
-            <div class="carousel-container">
-                <h2 class="animate__animated animate__fadeInDown">Welcome to <span>Mahidhara</span></h2>
-                <p class="animate__animated fanimate__adeInUp">We are specialised in the manufacture of bulk chemicals using Sodium, Potassium, Lithium and Magnesium metals.
-                </p>
-                <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+        <div id="heroCarousel" class="container carousel carousel-fade " data-ride="carousel">
+
+            <!-- Slide 1 -->
+            <div class="carousel-item active">
+                <div class="carousel-container">
+                    <h2 class="animate__animated animate__fadeInDown">Welcome to <span>Mahidhara</span></h2>
+                    <p class="animate__animated fanimate__adeInUp">We are specialised in the manufacture of bulk
+                        chemicals using Sodium, Potassium, Lithium and Magnesium metals.
+                    </p>
+                    <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+                </div>
             </div>
-        </div>
 
-        <!-- Slide 2 -->
-        <div class="carousel-item">
-            <div class="carousel-container">
-                <h2 class="animate__animated animate__fadeInDown">Leading Bulk Drug Manufacturer</h2>
-                <p class="animate__animated animate__fadeInUp">We take pride in introducing and developing the technology to manufacture “Magnesium Tertiary Butoxide” for the first time in the Country
-                </p>
-                <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+            <!-- Slide 2 -->
+            <div class="carousel-item">
+                <div class="carousel-container">
+                    <h2 class="animate__animated animate__fadeInDown">Leading Bulk Drug Manufacturer</h2>
+                    <p class="animate__animated animate__fadeInUp">We take pride in introducing and developing the
+                        technology to manufacture “Magnesium Tertiary Butoxide” for the first time in the Country
+                    </p>
+                    <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+                </div>
             </div>
-        </div>
 
-        <!-- Slide 3 -->
-        <div class="carousel-item">
-            <div class="carousel-container">
-                <h2 class="animate__animated animate__fadeInDown">Quality First</h2>
-                <p class="animate__animated animate__fadeInUp">Mahidhara Chemicals Private Limited has been awarded on NSIC – CRISIL Rating of CRISIL – SE2A
-                </p>
-                <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+            <!-- Slide 3 -->
+            <div class="carousel-item">
+                <div class="carousel-container">
+                    <h2 class="animate__animated animate__fadeInDown">Quality First</h2>
+                    <p class="animate__animated animate__fadeInUp">Mahidhara Chemicals Private Limited has been awarded
+                        on NSIC – CRISIL Rating of CRISIL – SE2A
+                    </p>
+                    <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+                </div>
             </div>
+
+            <a class="carousel-control-prev" href="#heroCarousel" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon bx bx-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+
+            <a class="carousel-control-next" href="#heroCarousel" role="button" data-slide="next">
+                <span class="carousel-control-next-icon bx bx-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+
         </div>
-
-        <a class="carousel-control-prev" href="#heroCarousel" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon bx bx-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-
-        <a class="carousel-control-next" href="#heroCarousel" role="button" data-slide="next">
-            <span class="carousel-control-next-icon bx bx-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-
-    </div>
-
-    <svg class="hero-waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+        <div id="particles-js">
+        </div>
+        <svg class="hero-waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
         viewBox="0 24 150 28 " preserveAspectRatio="none">
         <defs>
             <path id="wave-path" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z">
@@ -58,5 +63,4 @@
             <use xlink:href="#wave-path" x="50" y="9" fill="#fff">
         </g>
     </svg>
-
 </section>
