Changes as per client

--- a/views/featured.ejs
+++ b/views/featured.ejs
@@ -40,7 +40,7 @@
           <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
             <h3>Research & Development is the Core to our Foundation</h3>
             <p class="font-italic">
-              We have state of art R&D centre, well-equipped with Quality Control laboratory and a team of qualified scientists & technologists.
+              We have In-house R&D centre, well-equipped Quality Control laboratory and a team of qualified persons.
             </p>
             <ul>
               <li><i class="ri-check-double-line"></i> Mahidhara Chemicals Private Limited has been awarded on NSIC – CRISIL Rating of CRISIL – SE2A.</li>
@@ -49,7 +49,7 @@
             </ul>
             <p>
               Being in this industry, it's our moral responsibility to take care of the environment we live in. All the products that are manufactured at Mahidhara chemicals are non- pollutants.
-              <br> Employees and staff are the foundation of any business and we believe in protecting them at all costs. Safety and hygiene are the topmost priority for us. Therefore, All staff members are trained to handle sodium, potassium, lithium and magnesium metals.
+              <br> Employees and staff are the foundation of any business and we believe in protecting them at all costs. Safety and hygiene are the topmost priority for us. All staff members are well trained in safe handling of hazardous chemicals.
             </p>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center featureImg">
