--- a/views/heroSection.ejs
+++ b/views/heroSection.ejs
@@ -6,8 +6,9 @@
             <div class="carousel-item active">
                 <div class="carousel-container">
                     <h2 class="animate__animated animate__fadeInDown">Welcome to <span>Mahidhara</span></h2>
-                    <p class="animate__animated fanimate__adeInUp">We are specialised in the manufacture of bulk
-                        chemicals using Sodium, Potassium, Lithium and Magnesium metals.
+                    <p class="animate__animated fanimate__adeInUp">We are specialised in the manufacture of derivatives of Sodium, 
+                        Potassium, Lithium, Magnesium Metals and Fine chemicals.
+                        We also undertake toll manufacturing.
                     </p>
                     <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
                 </div>
@@ -16,7 +17,7 @@
             <!-- Slide 2 -->
             <div class="carousel-item">
                 <div class="carousel-container">
-                    <h2 class="animate__animated animate__fadeInDown">Leading Bulk Drug Manufacturer</h2>
+                    <h2 class="animate__animated animate__fadeInDown">Leading Speciality & Fine chemicals Manufacturer</h2>
                     <p class="animate__animated animate__fadeInUp">We take pride in introducing and developing the
                         technology to manufacture “Magnesium Tertiary Butoxide” for the first time in the Country
                     </p>
