--- a/views/services.ejs
+++ b/views/services.ejs
@@ -3,7 +3,7 @@
 
     <div class="section-title" data-aos="zoom-out">
       <h2>Products</h2>
-      <p>We offer wide range of pharmaceutcial grade bulk drugs</p>
+      <p>We offer wide range of DERIVATIVES OF SODIUM, POTASSIUM, LITHIUM, MAGNESIUM METALS AND FINE CHEMICALS.</p>
     </div>
     <div class="row">
       <% products.forEach(prod => { %>
