--- a/views/about.ejs
+++ b/views/about.ejs
@@ -9,20 +9,20 @@
       <div class="row content" data-aos="fade-up">
         <div class="col-lg-6">
           <p>
-            Established in 1997, Mahidhara chemicals has been a bulk manufacturer of special chemicals using Sodium, Potassium, Lithium and Magnesium metals for reputed companies.
+            Established in 1997, Mahidhara chemicals has been a manufacturer of derivatives of Sodium, Potassium, Lithium, Magnesium Metals and Fine chemicals for API manufacturers.
           </p>
           <ul>
             <li><i class="ri-check-double-line"></i> We take pride in introducing and developing the technology to manufacture “Magnesium Tertiary Butoxide” for the first time in the Country</li>
             <li><i class="ri-check-double-line"></i> This was followed by meeting the entire requirements of the tenofovir manufacturers. 
             </li>
-            <li><i class="ri-check-double-line"></i> Our units have been accredited with the latest version of ISO 9001:2005</li>
+            <li><i class="ri-check-double-line"></i> Our units have been accredited with the latest version of ISO 9001</li>
           </ul>
         </div>
         <div class="col-lg-6 pt-4 pt-lg-0">
           <p>
             We currently operate throughout the country from our 2 plants based in Andhra Pradesh and Telangana.
-            Our aim is to manufacture Active pharmaceutical ingredients which are of top quality, discovering and innovating technologies that would create a new revolution in the industry.
-            We are focused at developing technologies that would eliminate the import of substitute products. 
+            Our aim is to manufacture Speciality & Fine chemicals which are of top quality, discovering and innovating technologies.
+            We are focused at developing technologies for import substitute products. 
           </p>
           <a href="#" class="btn-learn-more">Learn More</a>
         </div>
