--- a/views/contactSites.ejs
+++ b/views/contactSites.ejs
@@ -11,7 +11,7 @@
           <div class="icon-box" data-aos="zoom-in-left">
             <div class="icon"><i class="las la-basketball-ball" style="color: #ff689b;"></i></div>
             <h4 class="title"><a href="">Administrative Office</a></h4>
-            <p class="description">G-4, Sai Peetambaram Residency, East Marredpally, Secunderabad - 500026, Telangana, India <br>Phone : +91 8455 240445, +91 8455 285904 <br>info.mahidhara@gmail.com</p>
+            <p class="description">G-3 &G-4, Sai Peetambaram Residency, East Marredpally, Secunderabad - 500026, Telangana, India <br>Phone : +91 8455 240445, +91 8455 285904 <br>info.mahidhara@gmail.com</p>
           </div>
         </div>
       </div>
@@ -21,16 +21,16 @@
         <div class="col-lg-4 col-md-6 mt-5 mt-md-0">
           <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="100">
             <div class="icon"><i class="las la-book" style="color: #e9bf06;"></i></div>
-            <h4 class="title"><a href="">Factory Telangana - Site 1</a></h4>
-            <p class="description">18, D II Phase - 1, I.D.A.
-                Patancheru, Medak District, 502 319, Telangana, INDIA <br>Phone : +91 8455 240445, +91 8455 285904 </p>
+            <h4 class="title"><a href="">Factory Telangana - Unit-1</a></h4>
+            <p class="description">18, D-II Phase - 1, I.D.A.
+                Patancheru-502 319, Sangareddy District,Telangana, INDIA <br>Phone : +91 8455 240445, +91 8455 285904 </p>
           </div>
         </div>
   
         <div class="col-lg-4 col-md-6 mt-5 mt-lg-0 ">
           <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="200">
             <div class="icon"><i class="las la-file-alt" style="color: #3fcdc7;"></i></div>
-            <h4 class="title"><a href="">Factory AP - Site 2</a></h4>
+            <h4 class="title"><a href="">Factory AP - Unit-2</a></h4>
             <p class="description">Plot No. 81, J.N.Pharma City
                 Thanam Village, Parawada Mandal
                 Visakhapatnam District - 531 021
