--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,7 +1,7 @@
 <footer id="footer">
     <div class="container">
         <h3>Mahidhara Chemicals</h3>
-        <p>Pharmaceutical Bulk Drug Manufaturers
+        <p>Leading Speciality & Fine chemicals Manufacturer
         </p>
         <div class="social-links">
             <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
