--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -11,7 +11,7 @@
                     <ul>
                         <li class="active"><a href="/">Home</a></li>
                         <li><a href="#about">About</a></li>
-                        <li><a href="#services">Services</a></li>
+                        <li><a href="#products">Products</a></li>
                         <li><a href="#portfolio">Portfolio</a></li>
                         <li><a href="#pricing">Pricing</a></li>
                         <!-- <li class="drop-down"><a href="tel:+917032160008">Projects</a>
