--- a/views/header.ejs
+++ b/views/header.ejs
@@ -16,7 +16,7 @@
         <li><a href="#pricing">Pricing</a></li>
         <li><a href="#team">Team</a></li> -->
         
-        <li class="drop-down"><a href="">Products</a>
+        <li class="drop-down"><a href="/#products">Products</a>
           <ul>
             <% products.forEach(prod => { %>
               <li><a href="/product/<%- prod.displayUrl %> "><%- prod.displayName %> </a></li>
