--- a/views/services.ejs
+++ b/views/services.ejs
@@ -1,4 +1,4 @@
-<section id="services" class="services">
+<section id="products" class="services">
   <div class="container">
 
     <div class="section-title" data-aos="zoom-out">
