--- a/views/singleProduct.ejs
+++ b/views/singleProduct.ejs
@@ -11,7 +11,7 @@
                     <h2><%= product.displayName %> </h2>
                     <ol>
                         <li><a href="/">Home</a></li>
-                        <li><a href="/products">Products</a></li>
+                        <li><a href="/#products">Products</a></li>
                         <li><%= product.displayName %></li>
                     </ol>
                 </div>
@@ -19,13 +19,13 @@
             </div>
         </section>
 
-        <section>
+        <!-- <section>
             <div class="row justify-content-center">
                 <img src="<%= product.image %>" alt="<%= product.displayName %> " width="300px" />
             </div>
             <h5 style="text-align: center; font-weight: bold;"><%= product.name %> </h5>
             <h6 style="text-align: center; font-weight: bold;"> CAS # <%= product.cas %></h6>
-        </section>
+        </section> -->
         <section>
             <div class="container">
                 <div class="row">
@@ -102,7 +102,6 @@
 <section>
     <div class="container" style="max-width: 900px;">
         <div class="row justify-content-center">
-            <p><%= product.downloadLink %></p>
             <a href="<%= product.downloadLink %>" download="<%= product.displayName %>.pdf"><button type="button" class="btn btn-theme" style="margin-right: 50px;">Download Brochure</button></a><button type="button" class="btn btn-theme">Enquiry</button>
         </div>
     </div>
