--- a/views/services.ejs
+++ b/views/services.ejs
@@ -1,16 +1,15 @@
 <section id="products" class="services">
   <div class="container">
-
     <div class="section-title" data-aos="zoom-out">
       <h2>Products</h2>
       <p>We offer wide range of DERIVATIVES OF SODIUM, POTASSIUM, LITHIUM, MAGNESIUM METALS AND FINE CHEMICALS.</p>
     </div>
     <div class="row">
       <% products.forEach(prod => { %>
-        <div class="col-lg-4 col-md-6" style="padding-top: 10px;">
+        <div class="col-lg-4 col-md-6" style="padding-top: 5px;">
           <div class="icon-box" data-aos="zoom-in-left">
-            <div class="icon"><img src="<%= prod.image %>" alt="" width="80"></div>
-            <h4 class="title"><a href="/product/<%- prod.displayUrl %> "><%= (prod.displayName.toUpperCase()) %> </a></h4>
+            <!-- <div class="icon"><img src="<%= prod.image %>" alt="" width="80"></div> -->
+            <h4 class="title"><a href="/product/<%- prod.displayUrl %> "><%= (prod.displayName.toUpperCase()) %> </a> <a  class="btn btn-brochure" href="<%= prod.downloadLink %>" download="<%= prod.displayName %>.pdf"><i style="padding-right: 5px;" class='bx bxs-download'></i> Brochure</a></h4>
             <p class="description">CAS # <%- prod.cas %> </p>
           </div>
         </div>
