--- a/views/head.ejs
+++ b/views/head.ejs
@@ -2,12 +2,12 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Mahidhara Bootstrap Template - Index</title>
+  <title>Mahidhara Chemicals Private Limited - Alkali Metals Manufacturer</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/Mahidhara Favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -36,7 +36,7 @@
     * License: https://bootstrapmade.com/license/
     ======================================================== -->
 
- <!-- Google tag (gtag.js) -->
+    <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-BCBEH8369D"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -44,6 +44,14 @@
   gtag('js', new Date());
 
   gtag('config', 'G-BCBEH8369D');
+</script>
+
+<script type="text/javascript">
+  (function(c,l,a,r,i,t,y){
+      c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+      t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+      y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+  })(window, document, "clarity", "script", "jiqrw792j5");
 </script>
 
 </head>
