--- a/views/singleHead.ejs
+++ b/views/singleHead.ejs
@@ -7,7 +7,7 @@
     <meta content="<%= product.metaKeyword %>" name="keywords">
   
     <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon">
+    <link href="assets/img/Mahidhara Favicon.png" rel="icon">
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
   
     <!-- Google Fonts -->
@@ -45,5 +45,13 @@
   
     gtag('config', 'G-BCBEH8369D');
   </script>
+
+<script type="text/javascript">
+  (function(c,l,a,r,i,t,y){
+      c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+      t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+      y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+  })(window, document, "clarity", "script", "jiqrw792j5");
+</script>
   
   </head>
