--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1691,11 +1691,11 @@ section {
 
 .detail_img img {
   vertical-align: middle;
-  padding: 0px;
-  width: auto;
-  height: auto;
+  padding: 5px;
+  width:auto;
+  height: 250px;
   max-height: 280px;
-  max-width: 100%;
+  max-width: 100%; 
 }
 
 .detail_img{
